src/molecules/ShoppingCartV2/ShoppingCartItem.pcss
.telia-shopping-cart {
  &__item {
    position: relative;
    background-color: white;
    border-radius: 8px;

    &__breakagefee-info {
      position: relative;
      font-family: 'TeliaSans-Regular', Helvetica, Roboto, Arial, sans-serif;
      width: 20rem;
      color: #f5e0ff !important;
      font-size: 1rem;
      background-color: #29003e !important;
      top: -12rem !important;
      left: 7.4rem !important;

      &::before {
        border-color: #29003e !important;
      }
    }

    &__icon {
      display: flex;
      height: 2rem;
      width: 2rem;
      cursor: pointer;
      margin: 0 0.5rem;
      background-color: transparent;
      border: none;
      color: #6d02a3;
    }

    &__name-wrapper {
      max-width: 18rem;
      display: flex;
      align-items: flex-start;
      flex-direction: column;
    }

    &__link {
      display: flex;
      align-items: center;
      span {
        margin-right: 0.5rem;
      }

      .link {
        &:hover {
          border-bottom: 1px solid var(--core-purple);
        }
        border-bottom: 1px solid #222222;
      }

      padding-right: 2rem;
      margin-bottom: 0.2rem;
      border: none;
      font-family: 'TeliaSans-Bold', Helvetica, Arial, sans-serif;

      @media all and (min-width: 48em) {
        padding-right: 0;
      }
    }

    &__discount-description {
      margin-right: 3.25rem;
      overflow: visible;
      margin-top: 0.25rem;
    }

    &__name {
      width: 100%;
      padding: 1rem 1rem 0 0;
      font-size: 1rem;

      &__container {
        display: flex;
      }
    }

    &__subtitle {
      display: flex;
      flex-direction: column;

      .paragraph {
        margin: 0px;
      }
    }

    &__quantity-picker-wrapper {
      display: flex;
      justify-content: flex-start;
      align-items: center;
      flex-wrap: wrap;

      .telia-shopping-cart__item__price-per {
        margin-left: 1rem;
      }
    }

    &__quantity-picker {
      display: flex;
      height: 2.75rem;
      align-items: center;

      .paragraph {
        margin: 0 0.5rem;
      }

      &__button {
        &:not(&--disabled):active,
        &:not(&--disabled):hover,
        &:not(&--disabled):focus {
          background-color: #e4b6fb;
          color: #6d02a3;
          box-shadow: inset 0 0 0 1px #6d02a3;
        }

        display: flex;
        align-items: center;
        justify-content: center;
        background-color: transparent;
        border: 1px solid #d6d6dd;
        border-radius: 50%;
        height: 2.75rem;
        width: 2.75rem;
        outline: none;
        font-size: 1.7rem;

        .Icon {
          width: 1.25rem;
          height: 1.25rem;
        }

        &:not(&--disabled) {
          cursor: pointer;
        }
      }
    }

    &__price {
      &__container {
        display: flex;
        justify-content: space-between;
        margin-bottom: 0.5rem;
      }

      &__cost {
        display: flex;
        flex-direction: column;
        font-family: 'TeliaSans-Bold', Helvetica, Arial, sans-serif;
        margin-bottom: 0px;
      }

      &__label {
        margin-bottom: 0px;
      }

      &__linethrough {
        font-size: 1rem;
        font-family: 'TeliaSans-Regular', Helvetica, Arial, sans-serif;
        margin-bottom: 0rem;
        text-align: right;
        text-decoration-line: line-through;
        color: var(--grey-500);
      }

      &__linethroughDisclaimer {
        font-size: 1rem;
        font-family: 'TeliaSans-Regular', Helvetica, Arial, sans-serif;
        margin-bottom: 0rem;
        text-align: right;
        color: var(--grey-500);
      }
    }

    &__image,
    &__no-image {
      &__container {
        max-width: 2.5rem;
        width: 2.5rem;
        margin: 1rem 1rem 0 1rem;

        .link:active,
        .link:focus,
        .link:focus-within {
          color: #990ae3;
        }
      }
    }

    &__image {
      display: block;
      height: auto;
      max-width: 2.5rem;
      width: 2.5rem;
    }

    &__delete-button {
      &__container {
        &:active,
        &:hover,
        &:focus {
          background-color: var(--core-purple);
          color: white;
        }

        display: flex;
        justify-content: center;
        background-color: transparent;
        border: none;
        border-radius: 1rem;
        color: #4e4e4e;
        outline: none;
        position: absolute;
        height: 1.5rem;
        width: 3rem;
        right: 4px;
        top: 16px;
        cursor: pointer;
        padding: 0.25rem 0.5rem;

        .Icon {
          width: 1.06rem;
          height: 1.1rem;
          margin-bottom: 1px;
        }
      }
    }

    &__unique-discount {
      display: flex;
      justify-content: space-between;
      margin-top: 0.5rem;
      margin-bottom: 0.5rem;
      &__label {
        font-family: 'TeliaSans-Regular', Helvetica, Arial, sans-serif;
        font-style: italic;
      }

      &__price {
        font-family: 'TeliaSans-Bold', Helvetica, Arial, sans-serif;
      }
    }
  }
}

